--- a/invitationCard/index.html
+++ b/invitationCard/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/anillos.png" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/anillos.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="light">
-  <title>Vite + React</title>
+  <title>Noe y Agu</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
