--- a/invitationCard/index.html
+++ b/invitationCard/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es" translate="no">  <!--  lang="es" indica español, translate="no" evita traducción -->
 
 <head>
   <meta charset="UTF-8" />
